// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots GenericNOCConfirm Accept Field 1`] = `
<section
  className="storybook-container"
>
  <div
    className="mod-new-process"
  >
    <section
      className="card"
    >
      <section
        className="form-step divider"
      >
        <h1>
          NOC Confirm
        </h1>
        <div
          className="mod-process-step"
        >
          <section
            className="card"
          >
            <form
              noValidate={true}
              onSubmit={[Function]}
            >
              <section
                className="form-step"
              >
                <section
                  className="accept-field"
                  id="input-confirm_migrate_sap"
                >
                  <div>
                    <label>
                      Delete the SURFnet7 IP service config from Alice and Bob.
                    </label>
                  </div>
                  <div>
                    <label>
                      Physically patch the customer port from SN7 to SN8 HW.
                    </label>
                  </div>
                  <div>
                    <label
                      className="warning"
                    >
                      Watch out! The next step is service impacting for the customer service
                    </label>
                  </div>
                  <div
                    className="checkbox"
                  >
                    <input
                      disabled={false}
                      id="confirm_migrate_sap"
                      name="confirm_migrate_sap"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <label
                      htmlFor="confirm_migrate_sap"
                    >
                      <span
                        tabIndex="0"
                      >
                        <i
                          className="fa fa-check"
                        />
                      </span>
                    </label>
                    <label
                      className="info"
                      htmlFor="confirm_migrate_sap"
                    >
                      Confirm the migration of the SAP
                    </label>
                  </div>
                  <div
                    className="skip"
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="skip_migrate_sap_workflow"
                      name="skip_migrate_sap_workflow"
                      onChange={[Function]}
                      type="checkbox"
                    />
                    <label
                      htmlFor="skip_migrate_sap_workflow"
                    >
                      <span
                        tabIndex="0"
                      >
                        <i
                          className="fa fa-check"
                        />
                      </span>
                    </label>
                    <label
                      className="info"
                      htmlFor="skip_migrate_sap_workflow"
                    >
                      do not continue with the migration and return to the original state, this will end the workflow without making any changes
                    </label>
                  </div>
                </section>
              </section>
              <section
                className="buttons"
              >
                <button
                  className="button"
                  id="button-cancel-form-submit"
                  onClick={[Function]}
                  type="button"
                >
                  Cancel
                </button>
                <button
                  className="button blue"
                  id="button-submit-form-submit"
                  tabIndex={0}
                  type="submit"
                >
                  Submit
                </button>
              </section>
            </form>
          </section>
        </div>
      </section>
    </section>
  </div>
</section>
`;

exports[`Storyshots GenericNOCConfirm Complex 1`] = `
<section
  className="storybook-container"
>
  <section>
    <div>
      <label>
        Confirm the migration of the SAP
      </label>
    </div>
    <div>
      <em>
        Use the info above to confirm the SAP you want to migrate
      </em>
    </div>
    <div>
      <label
        className="warning"
      >
        Watch out! The next step is service impacting for the customer service
      </label>
    </div>
    <div>
      <a
        href="http://example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        http://example.com
      </a>
    </div>
    <div
      className="checkbox"
    >
      <input
        disabled={false}
        id="check_delete_sn7_service_config"
        name="check_delete_sn7_service_config"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="check_delete_sn7_service_config"
      >
        <span
          tabIndex="0"
        >
          <i
            className="fa fa-check"
          />
        </span>
      </label>
      <label
        className="info"
        htmlFor="check_delete_sn7_service_config"
      >
        Delete the SURFnet7 IP service config from Alice and Bob.
      </label>
    </div>
    <div>
      <label>
        The new path for service has been put in IMS
      </label>
    </div>
    <div
      className="level_2"
    >
      <input
        disabled={false}
        id="check_ims_circuit"
        name="check_ims_circuit"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="check_ims_circuit"
      >
        <span
          tabIndex="0"
        >
          <i
            className="fa fa-check"
          />
        </span>
      </label>
      <label
        className="info"
        htmlFor="check_ims_circuit"
      >
        ims circuit 1
      </label>
    </div>
    <div
      className="level_2"
    >
      <input
        disabled={false}
        id="check_ims_circuit"
        name="check_ims_circuit"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="check_ims_circuit"
      >
        <span
          tabIndex="0"
        >
          <i
            className="fa fa-check"
          />
        </span>
      </label>
      <label
        className="info"
        htmlFor="check_ims_circuit"
      >
        ims circuit 2
      </label>
    </div>
    <div
      className="checkbox"
    >
      <input
        disabled={false}
        id="check_port_patched_sn7_sn8"
        name="check_port_patched_sn7_sn8"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="check_port_patched_sn7_sn8"
      >
        <span
          tabIndex="0"
        >
          <i
            className="fa fa-check"
          />
        </span>
      </label>
      <label
        className="info"
        htmlFor="check_port_patched_sn7_sn8"
      >
        Physically patch the customer port from SN7 to SN8 HW.
      </label>
    </div>
  </section>
</section>
`;

exports[`Storyshots GenericNOCConfirm Complex in form 1`] = `
<section
  className="storybook-container"
>
  <div
    className="mod-new-process"
  >
    <section
      className="card"
    >
      <section
        className="form-step divider"
      >
        <h1>
          NOC Confirm
        </h1>
        <div
          className="mod-process-step"
        >
          <section
            className="card"
          >
            <form
              onSubmit={[Function]}
            >
              <section
                className="form-step"
              >
                <section
                  className="form-divider confirm_migrate_sap"
                  id="input-confirm_migrate_sap"
                >
                  <section>
                    <div>
                      <label>
                        Confirm the migration of the SAP
                      </label>
                    </div>
                    <div>
                      <em>
                        Use the info above to confirm the SAP you want to migrate
                      </em>
                    </div>
                    <div>
                      <label
                        className="warning"
                      >
                        Watch out! The next step is service impacting for the customer service
                      </label>
                    </div>
                    <div>
                      <a
                        href="http://example.com"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        http://example.com
                      </a>
                    </div>
                    <div
                      className="checkbox"
                    >
                      <input
                        disabled={false}
                        id="check_delete_sn7_service_config"
                        name="check_delete_sn7_service_config"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <label
                        htmlFor="check_delete_sn7_service_config"
                      >
                        <span
                          tabIndex="0"
                        >
                          <i
                            className="fa fa-check"
                          />
                        </span>
                      </label>
                      <label
                        className="info"
                        htmlFor="check_delete_sn7_service_config"
                      >
                        Delete the SURFnet7 IP service config from Alice and Bob.
                      </label>
                    </div>
                    <div>
                      <label>
                        The new path for service has been put in IMS
                      </label>
                    </div>
                    <div
                      className="level_2"
                    >
                      <input
                        disabled={false}
                        id="check_ims_circuit"
                        name="check_ims_circuit"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <label
                        htmlFor="check_ims_circuit"
                      >
                        <span
                          tabIndex="0"
                        >
                          <i
                            className="fa fa-check"
                          />
                        </span>
                      </label>
                      <label
                        className="info"
                        htmlFor="check_ims_circuit"
                      >
                        ims circuit 1
                      </label>
                    </div>
                    <div
                      className="level_2"
                    >
                      <input
                        disabled={false}
                        id="check_ims_circuit"
                        name="check_ims_circuit"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <label
                        htmlFor="check_ims_circuit"
                      >
                        <span
                          tabIndex="0"
                        >
                          <i
                            className="fa fa-check"
                          />
                        </span>
                      </label>
                      <label
                        className="info"
                        htmlFor="check_ims_circuit"
                      >
                        ims circuit 2
                      </label>
                    </div>
                    <div
                      className="checkbox"
                    >
                      <input
                        disabled={false}
                        id="check_port_patched_sn7_sn8"
                        name="check_port_patched_sn7_sn8"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <label
                        htmlFor="check_port_patched_sn7_sn8"
                      >
                        <span
                          tabIndex="0"
                        >
                          <i
                            className="fa fa-check"
                          />
                        </span>
                      </label>
                      <label
                        className="info"
                        htmlFor="check_port_patched_sn7_sn8"
                      >
                        Physically patch the customer port from SN7 to SN8 HW.
                      </label>
                    </div>
                  </section>
                  <em
                    className="error"
                  />
                </section>
              </section>
              <section
                className="buttons"
              >
                <button
                  className="button"
                  id="button-cancel-form-submit"
                  onClick={[Function]}
                  type="button"
                >
                  Cancel
                </button>
                <button
                  className="button blue"
                  id="button-submit-form-submit"
                  tabIndex={0}
                  type="submit"
                >
                  Submit
                </button>
              </section>
            </form>
          </section>
        </div>
      </section>
    </section>
  </div>
</section>
`;

exports[`Storyshots GenericNOCConfirm Legacy 1`] = `
<section
  className="storybook-container"
>
  <section>
    <div>
      <label>
        Confirm removal
      </label>
    </div>
    <div>
      <em>
        Is this Static IP service removed from the network?
      </em>
    </div>
    <div
      className="checkbox"
    >
      <input
        disabled={false}
        id="noc_remove_static_ip_confirmation"
        name="noc_remove_static_ip_confirmation"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="noc_remove_static_ip_confirmation"
      >
        <span
          tabIndex="0"
        >
          <i
            className="fa fa-check"
          />
        </span>
      </label>
      <label
        className="info"
        htmlFor="noc_remove_static_ip_confirmation"
      >
        Confirm removal
      </label>
    </div>
  </section>
</section>
`;

exports[`Storyshots GenericNOCConfirm Legacy in form 1`] = `
<section
  className="storybook-container"
>
  <div
    className="mod-new-process"
  >
    <section
      className="card"
    >
      <section
        className="form-step divider"
      >
        <h1>
          NOC Confirm
        </h1>
        <div
          className="mod-process-step"
        >
          <section
            className="card"
          >
            <form
              onSubmit={[Function]}
            >
              <section
                className="form-step"
              >
                <section
                  className="form-divider noc_remove_static_ip_confirmation"
                  id="input-noc_remove_static_ip_confirmation"
                >
                  <section>
                    <div>
                      <label>
                        Confirm removal
                      </label>
                    </div>
                    <div>
                      <em>
                        Is this Static IP service removed from the network?
                      </em>
                    </div>
                    <div
                      className="checkbox"
                    >
                      <input
                        disabled={false}
                        id="noc_remove_static_ip_confirmation"
                        name="noc_remove_static_ip_confirmation"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <label
                        htmlFor="noc_remove_static_ip_confirmation"
                      >
                        <span
                          tabIndex="0"
                        >
                          <i
                            className="fa fa-check"
                          />
                        </span>
                      </label>
                      <label
                        className="info"
                        htmlFor="noc_remove_static_ip_confirmation"
                      >
                        Confirm removal
                      </label>
                    </div>
                  </section>
                  <em
                    className="error"
                  />
                </section>
              </section>
              <section
                className="buttons"
              >
                <button
                  className="button"
                  id="button-cancel-form-submit"
                  onClick={[Function]}
                  type="button"
                >
                  Cancel
                </button>
                <button
                  className="button blue"
                  id="button-submit-form-submit"
                  tabIndex={0}
                  type="submit"
                >
                  Submit
                </button>
              </section>
            </form>
          </section>
        </div>
      </section>
    </section>
  </div>
</section>
`;
